# EDPO_FS26_E1_Kafka_Tests

./: MEASUREMENT_PROTOCOL.md  README.md  TEST_REPORT.md  docker-compose.yml  pyproject.toml  review.md  run_test_1.2_B.sh  run_test_1.2_C.sh  run_test_1.3_A.sh  run_test_2.1_A.sh  run_test_2.2.sh  run_test_2.3.sh  run_test_3.1.sh  run_test_3.2.sh  stats_1.1_A_60s.txt  stats_1.1_B_60s.txt  stats_1.2_B_180s.txt  stats_1.2_C_180s.txt  stats_1.3_B_180s.txt  stats_2.3_A_180s.txt  stats_2.3_A_60s.txt  stats_2.3_B_180s.txt  stats_2.3_B_60s.txt
.cursor/plans/: kafka_testing_repository_c0de356e.plan.md
ClickStream-Consumer/: pom.xml
ClickStream-Producer/: pom.xml
Logs/: lag_2.1_A.txt  lag_2.1_B.txt
Stats/: stats_1.1_A_180s.txt  stats_1.1_B_180s.txt  stats_1.2_A_180s.txt  stats_1.2_A_60s.txt  stats_1.2_B_60s.txt  stats_1.2_C_60s.txt  stats_1.3_A_180s.txt  stats_1.3_A_60s.txt  stats_1.3_B_60s.txt  stats_1.4_A_180s.txt  stats_1.4_A_60s.txt  stats_1.4_B_180s.txt  stats_1.4_B_60s.txt  stats_2.1_A_180s.txt  stats_2.1_A_60s.txt  stats_2.1_B_180s.txt  stats_2.1_B_60s.txt
Test files/: reset_env.sh  run_test_1.1_A.sh  run_test_1.1_B.sh  run_test_1.2_A.sh  run_test_1.3_B.sh  run_test_1.4_A.sh  run_test_1.4_B.sh  run_test_2.1_B.sh
experiments/: __init__.py  common.py  consumer_tests.py  fault_tolerance_tests.py  producer_tests.py
results/: review.md
test-configs/: consumer-groups.md  consumer-lag.md  consumer-offset.md  fault-broker-failure.md  fault-durability.md  producer-acks.md  producer-batch-size.md  producer-load-testing.md  producer-partitions.md
(+13 files in other folders)
